# n-body-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  body.cpp  body.h  camera.cpp  camera.h  config.h  main.cpp  menuGUI.cpp  menuGUI.h  physicsEngine.cpp  physicsEngine.h  renderer.cpp  renderer.h  shader.cpp  shader.frag  shader.h  shader.vert
shaders/: shader.vert
src/: body.cpp  body.h  camera.cpp  camera.h  config.h  main.cpp  menuGUI.cpp  menuGUI.h  physicsEngine.cpp  physicsEngine.h  renderer.cpp  renderer.h  shader.cpp
